Inserção das Tabelas de Listar

--- a/src/app/component/clube/clube.component.html
+++ b/src/app/component/clube/clube.component.html
@@ -35,6 +35,6 @@
   </form>
 
   <button mat-raised-button color="salvar">Salvar</button>
-  <button style="margin-left: 10px" mat-raised-button color="listar"><a [routerLink]="['/clubelistar']">Listar</a></button>
+  <button class="margembotao" mat-raised-button color="listar"><a [routerLink]="['/clubelistar']">Listar</a></button>
 
 </div>
