--- a/src/app/component/partida/partida.component.html
+++ b/src/app/component/partida/partida.component.html
@@ -35,5 +35,5 @@
     </form>
 
     <button mat-raised-button color="salvar">Salvar</button>
-    <button style="margin-left: 10px" mat-raised-button color="listar"><a [routerLink]="['/partidalistar']">Listar</a></button>
+    <button class="margembotao" mat-raised-button color="listar"><a [routerLink]="['/partidalistar']">Listar</a></button>
 </div>
