--- a/src/app/component/jogador/jogador.component.html
+++ b/src/app/component/jogador/jogador.component.html
@@ -13,9 +13,9 @@
 </form>
 
 
-<h4>Basic mat-select</h4>
+<h4>Clube:</h4>
 <mat-form-field appearance="fill">
-  <mat-label>Favorite food</mat-label>
+  <mat-label>Lista de Clubes</mat-label>
   <mat-select>
     <mat-option *ngFor="let food of foods" [value]="food.value">
       {{food.viewValue}}
@@ -52,6 +52,6 @@ Pé bom:
 </div>
 
 <button mat-raised-button color="salvar">Salvar</button>
-<button style="margin-left: 10px; margin-top: 30px;" mat-raised-button color="listar"><a [routerLink]="['/jogadorlistar']">Listar</a></button>
+<button class="margembotao" mat-raised-button color="listar"><a [routerLink]="['/jogadorlistar']">Listar</a></button>
 
 </div>
