primeira de hoje

--- a/src/app/component/jogadorlistar/jogadorlistar.component.html
+++ b/src/app/component/jogadorlistar/jogadorlistar.component.html
@@ -16,7 +16,7 @@
       <th>Pé Bom</th>
       <th>Editar</th>
     </tr>
-    <tr>
+    <tr *ngFor="let cadajogador of jogadorList">
       <td>Danilo</td>
       <td>Bahia FC</td>
       <td>50</td>
