--- a/src/app/component/clubelistar/clubelistar.component.html
+++ b/src/app/component/clubelistar/clubelistar.component.html
@@ -16,7 +16,7 @@
       <th>Editar</th>
     </tr>
     <tr *ngFor="let cadaclube of clubeList">  
-      <td>{{cadaclube.nome}}/td>
+      <td>{{cadaclube.nome}}</td>
       <td>{{cadaclube.cidade}}</td>
       <td>{{cadaclube.estadio}}</td>
       <td>{{cadaclube.anodefundacao}}</td>
