Jogador incluir e listar funcionando com MOCK

--- a/src/app/component/jogador/jogador.component.html
+++ b/src/app/component/jogador/jogador.component.html
@@ -3,55 +3,56 @@
     <h1>Jogador</h1>
 </div>
 
-<form class="nome">
+<form class="nome" [formGroup]="form" (ngSubmit)="save()">
     Qual o nome do Jogador?<br>
     <mat-form-field class="jogadornome">
       <mat-label>Nome do Jogador:</mat-label>
-      <input matInput placeholder="">
+      <input matInput placeholder="" formControlName = "nome">
     </mat-form-field>
     <br><br><br>
-</form>
+
 
 
 <h4>Clube:</h4>
 <mat-form-field appearance="fill">
   <mat-label>Lista de Clubes</mat-label>
-  <mat-select>
-    <mat-option *ngFor="let food of foods" [value]="food.value">
+  <mat-select formControlName = "posicao">
+    <mat-option *ngFor="let food of foods" [value]="food.value" >
       {{food.viewValue}}
     </mat-option>
   </mat-select>
 </mat-form-field>
 <br><br><br>
 
-<form>
+
     Qual o número da camisa dele?<br>
     <mat-form-field class="jogadorcamisa">
       <mat-label>Número da Camisa:</mat-label>
-      <input matInput placeholder="">
+      <input matInput placeholder="" formControlName = "camisa">
     </mat-form-field>
     <br><br><br>
 
     Em que posição ele joga?<br>
     <mat-form-field class="jogadorposicao">
       <mat-label>Posição:</mat-label>
-      <input matInput placeholder="">
+      <input matInput placeholder="" formControlName = "posicao">
     </mat-form-field>
     <br><br><br>
-</form>
+
 
 Pé bom:
 <br><br>
 
 <div class="pebom">
-<mat-radio-group aria-label="Select an option">
-    <mat-radio-button value="1">Pé Esquerdo</mat-radio-button>
+<mat-radio-group aria-label="Select an option" formControlName = "pebom">
+    <mat-radio-button value="Esquerdo" >Pé Esquerdo</mat-radio-button>
     <br><br>
-    <mat-radio-button value="2">Pé Direito</mat-radio-button>
+    <mat-radio-button value="Direito" >Pé Direito</mat-radio-button>
   </mat-radio-group>
 </div>
+<!-- importante que o botão esteja dentro da tag FORM já que ele  -->
+<button mat-raised-button color="salvar" type="submit">Salvar</button>
 
-<button mat-raised-button color="salvar">Salvar</button>
 <button class="margembotao" mat-raised-button color="listar"><a [routerLink]="['/jogadorlistar']">Listar</a></button>
-
+</form>
 </div>
