--- a/src/app/component/jogadorlistar/jogadorlistar.component.html
+++ b/src/app/component/jogadorlistar/jogadorlistar.component.html
@@ -16,6 +16,7 @@
       <th>Pé Bom</th>
       <th>Editar</th>
     </tr>
+    <!-- ngFor serve como um for, ele vai pegar todos os dados obtidos com o get e colocar em td's -->
     <tr *ngFor="let cadajogador of jogadorList">
       <td>{{cadajogador.nome}}</td>
       <td>{{cadajogador.clube}}</td>
