--- a/src/app/component/jogador/jogador.component.html
+++ b/src/app/component/jogador/jogador.component.html
@@ -50,7 +50,7 @@ Pé bom:
     <mat-radio-button value="Direito" >Pé Direito</mat-radio-button>
   </mat-radio-group>
 </div>
-<!-- importante que o botão esteja dentro da tag FORM já que ele  -->
+<!-- importante que o botão esteja dentro da tag FORM já que ele é o submit do form  -->
 <button mat-raised-button color="salvar" type="submit">Salvar</button>
 
 <button class="margembotao" mat-raised-button color="listar"><a [routerLink]="['/jogadorlistar']">Listar</a></button>
