--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,6 +1,6 @@
 <mat-grid-list cols="3" rowHeight="1:1">
-    <mat-grid-tile class="button"><a [routerLink]="['/clube']">Clube</a></mat-grid-tile>
-    <mat-grid-tile class="button"><a [routerLink]="['/jogador']">Jogador</a></mat-grid-tile>
-    <mat-grid-tile class="button"><a [routerLink]="['/partida']">Partida</a></mat-grid-tile>
-  </mat-grid-list>
-  
+
+  <mat-grid-tile class="button"><a [routerLink]="['/clube']"><h1 style="text-align: center;">Clube</h1><img src="./../assets/clube.jpg"></a></mat-grid-tile>
+  <mat-grid-tile class="button"><a [routerLink]="['/jogador']"><h1 style="text-align: center;">Jogador</h1><img src="./../assets/jogador.jpg" /></a></mat-grid-tile>
+  <mat-grid-tile class="button"><a [routerLink]="['/partida']"><h1 style="text-align: center;">Partida</h1><img src="./../assets/partida.jpg"></a></mat-grid-tile>
+</mat-grid-list>
