--- a/src/styles.css
+++ b/src/styles.css
@@ -9,12 +9,11 @@ a:link {
   }
   
   a:visited {
-    color: red;
     text-decoration: none;
   }
   
   a:hover {
-    color: yellow;
+    color: blue;
   }
 
 
