Ajustes feitos para integração da API

--- a/src/app/component/clube/clube.component.html
+++ b/src/app/component/clube/clube.component.html
@@ -21,13 +21,13 @@
     Qual o nome do estádio?<br>
     <mat-form-field class="nomeestadio">
       <mat-label>Nome do Estádio:</mat-label>
-      <input matInput placeholder="" formControlName="estadio">
+      <input matInput placeholder="" formControlName="nomeEstadio">
     </mat-form-field>
 
     <br><br><br>
 
     Qual o ano de fundação do Clube?<br>
-    <mat-form-field class="anodefundacao" formControlName="anodefundacao">
+    <mat-form-field class="anodefundacao" formControlName="anoFundacao">
       <mat-label>Ano de fundação:</mat-label>
       <input matInput placeholder="">
     </mat-form-field>
