--- a/src/app/component/clubelistar/clubelistar.component.html
+++ b/src/app/component/clubelistar/clubelistar.component.html
@@ -18,8 +18,8 @@
     <tr *ngFor="let cadaclube of clubeList">  
       <td>{{cadaclube.nome}}</td>
       <td>{{cadaclube.cidade}}</td>
-      <td>{{cadaclube.estadio}}</td>
-      <td>{{cadaclube.anodefundacao}}</td>
+      <td>{{cadaclube.nomeEstadio}}</td>
+      <td>{{cadaclube.anoFundacao}}</td>
       <td><button mat-raised-button color="salvar">Editar</button></td>
     </tr>
   </table>
