--- a/src/app/component/jogador/jogador.component.html
+++ b/src/app/component/jogador/jogador.component.html
@@ -44,7 +44,7 @@ Pé bom:
 <br><br>
 
 <div class="pebom">
-<mat-radio-group aria-label="Select an option" formControlName = "pebom">
+<mat-radio-group aria-label="Select an option" formControlName = "peBom">
     <mat-radio-button value="Esquerdo" >Pé Esquerdo</mat-radio-button>
     <br><br>
     <mat-radio-button value="Direito" >Pé Direito</mat-radio-button>
