--- a/src/app/component/partidalistar/partidalistar.component.html
+++ b/src/app/component/partidalistar/partidalistar.component.html
@@ -17,10 +17,10 @@
       <th>Editar</th>
     </tr>
     <tr *ngFor="let cadapartida of partidaList">
-      <td>{{cadapartida.mandante}}</td>
-      <td>{{cadapartida.golsmandante}}</td>
-      <td>{{cadapartida.golsvisitante}}</td>
-      <td>{{cadapartida.visitante}}</td>
+      <td>{{cadapartida.idMandante}}</td>
+      <td>{{cadapartida.golsMandante}}</td>
+      <td>{{cadapartida.golsVisitante}}</td>
+      <td>{{cadapartida.idVisitante}}</td>
       <td>{{cadapartida.data}}</td>
       <td><button mat-raised-button color="salvar">Editar</button></td>
     </tr>
