--- a/src/app/component/clubelistar/clubelistar.component.html
+++ b/src/app/component/clubelistar/clubelistar.component.html
@@ -23,7 +23,7 @@
       <td><button mat-raised-button color="salvar">Editar</button></td>
     </tr>
   </table>
-  <a [routerLink]="['/jogador']"> <img class="botaomais" src="./../assets/addbutton.webp"> </a>
+  <a [routerLink]="['/clube']"> <img class="botaomais" src="./../assets/addbutton.webp"> </a>
 </div>
 
 </body>
