--- a/src/app/component/partida/partida.component.html
+++ b/src/app/component/partida/partida.component.html
@@ -5,7 +5,7 @@
 
   <form class="partidaformulario" [formGroup]="form" (ngSubmit)="save()">
     Mandante:<br>
-    <mat-form-field class="mandante">
+    <mat-form-field>
       <mat-label>Mandante:</mat-label>
       <input matInput placeholder="" formControlName="mandante">
     </mat-form-field>
@@ -13,14 +13,14 @@
     <br><br><br>
 
     Visitante<br>
-    <mat-form-field class="visitante">
+    <mat-form-field>
       <mat-label>Visitante:</mat-label>
       <input matInput placeholder="" formControlName="visitante">
     </mat-form-field>
     <br><br><br>
 
     Gols Mandante:<br>
-    <mat-form-field class="golsmandante">
+    <mat-form-field>
       <mat-label>Gols Mandante:</mat-label>
       <input matInput placeholder="" formControlName="golsmandante">
     </mat-form-field>
@@ -28,7 +28,7 @@
     <br><br><br>
 
     Gols Visitante:<br>
-    <mat-form-field class="golsvisitante">
+    <mat-form-field>
       <mat-label>Gols Visitante:</mat-label>
       <input matInput placeholder="" formControlName="golsvisitante">
     </mat-form-field>
