--- a/src/app/component/jogador/jogador.component.html
+++ b/src/app/component/jogador/jogador.component.html
@@ -16,9 +16,9 @@
 <h4>Clube:</h4>
 <mat-form-field appearance="fill">
   <mat-label>Lista de Clubes</mat-label>
-  <mat-select formControlName = "posicao">
-    <mat-option *ngFor="let jogadordrop of jogadordrop" [value]="jogadordrop.value" >
-      {{jogadordrop.viewValue}}
+  <mat-select formControlName = "idClube">
+    <mat-option *ngFor="let clube of clubes" [value]="clube.nome" >
+      {{clube.nome}}
     </mat-option>
   </mat-select>
 </mat-form-field>
