--- a/src/app/component/jogadorlistar/jogadorlistar.component.html
+++ b/src/app/component/jogadorlistar/jogadorlistar.component.html
@@ -14,7 +14,7 @@
       <th>Camisa</th>
       <th>Posição</th>
       <th>Pé Bom</th>
-      <th>Editar</th>
+      <th></th>
     </tr>
     <!-- ngFor serve como um for, ele vai pegar todos os dados obtidos com o get e colocar em td's -->
     <tr *ngFor="let cadajogador of jogadorList">
@@ -23,7 +23,7 @@
       <td>{{cadajogador.camisa}}</td>
       <td>{{cadajogador.posicao}}</td>
       <td>{{cadajogador.peBom}}</td>
-      <td><button mat-raised-button color="salvar">Editar</button></td>
+      <td><button><img class="bedit" src="./../assets/editar.png"></button><button><img class="bdelete" src="./../assets/lixeira.png"></button></td>
     </tr>
   </table>
   <a [routerLink]="['/jogador']"> <img class="botaomais" src="./../assets/addbutton.webp"> </a>
