--- a/src/app/component/jogador/jogador.component.html
+++ b/src/app/component/jogador/jogador.component.html
@@ -1,58 +1,63 @@
 <div class="jogadorgeral">
-<div class="titulo">
+  <div class="titulo">
     <h1>Jogador</h1>
-</div>
+  </div>
 
-<form class="nome" [formGroup]="form" (ngSubmit)="save()">
+  <form class="nome" [formGroup]="form" (ngSubmit)="save()">
     Qual o nome do Jogador?<br>
     <mat-form-field>
       <mat-label>Nome do Jogador:</mat-label>
-      <input matInput placeholder="" formControlName = "nome">
+      <input matInput placeholder="" formControlName="nome">
     </mat-form-field>
     <br><br><br>
 
 
 
-<h4>Clube:</h4>
-<mat-form-field appearance="fill">
-  <mat-label>Lista de Clubes</mat-label>
-  <mat-select formControlName = "idClube">
-    <mat-option *ngFor="let clube of clubes" [value]="clube.nome" >
-      {{clube.nome}}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
-<br><br><br>
+    <h4>Clube:</h4>
+    <mat-form-field appearance="fill">
+      <mat-label>Lista de Clubes</mat-label>
+      <mat-select formControlName="idClube">
+        <mat-option *ngFor="let clube of clubes" [value]="clube.nome">
+          {{clube.nome}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <br><br><br>
 
 
     Qual o número da camisa dele?<br>
     <mat-form-field>
       <mat-label>Número da Camisa:</mat-label>
-      <input matInput placeholder="" formControlName = "camisa">
+      <input matInput placeholder="" formControlName="camisa">
     </mat-form-field>
     <br><br><br>
 
     Em que posição ele joga?<br>
     <mat-form-field>
       <mat-label>Posição:</mat-label>
-      <input matInput placeholder="" formControlName = "posicao">
+      <mat-select formControlName="posicao">
+        <mat-option *ngFor="let banana of posicoes" [value]="banana.value">
+          {{banana.viewValue}}
+        </mat-option>
+      </mat-select>
     </mat-form-field>
     <br><br><br>
 
 
-Pé bom:
-<br><br>
-
-<div>
-<mat-radio-group aria-label="Select an option" formControlName = "peBom">
-    <mat-radio-button value="Esquerdo" >Pé Esquerdo</mat-radio-button>
+    Pé bom:
     <br><br>
-    <mat-radio-button value="Direito" >Pé Direito</mat-radio-button>
-  </mat-radio-group>
-</div>
-<!-- importante que o botão esteja dentro da tag FORM já que ele é o submit do form  -->
-<button mat-raised-button color="salvar" type="submit">Salvar</button>
 
-<button class="margembotao" mat-raised-button color="listar"><a [routerLink]="['/jogadorlistar']">Listar</a></button>
-</form>
+    <div>
+      <mat-radio-group aria-label="Select an option" formControlName="peBom">
+        <mat-radio-button value="Esquerdo">Pé Esquerdo</mat-radio-button>
+        <br><br>
+        <mat-radio-button value="Direito">Pé Direito</mat-radio-button>
+      </mat-radio-group>
+    </div>
+    <!-- importante que o botão esteja dentro da tag FORM já que ele é o submit do form  -->
+    <button mat-raised-button color="salvar" type="submit">Salvar</button>
+
+    <button class="margembotao" mat-raised-button color="listar"><a
+        [routerLink]="['/jogadorlistar']">Listar</a></button>
+  </form>
 </div>
