--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -3,4 +3,5 @@
   <mat-grid-tile class="button"><a [routerLink]="['/clube']"><h1 style="text-align: center;">Clube</h1><img src="./../assets/clube.jpg"></a></mat-grid-tile>
   <mat-grid-tile class="button"><a [routerLink]="['/jogador']"><h1 style="text-align: center;">Jogador</h1><img src="./../assets/jogador.jpg" /></a></mat-grid-tile>
   <mat-grid-tile class="button"><a [routerLink]="['/partida']"><h1 style="text-align: center;">Partida</h1><img src="./../assets/partida.jpg"></a></mat-grid-tile>
+  <mat-grid-tile class="button"><a [routerLink]="['/classificacao']"><h1 style="text-align: center;">Classificação</h1><img src=""></a></mat-grid-tile>
 </mat-grid-list>
