--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     alt="Logo"
     src="./../assets/bolas.png"
   />
+  
   <span><a [routerLink]="['/']">Home</a></span>
   <span class="pipeline">|</span>
   <span><a [routerLink]="['/clube']">Clube</a></span>
@@ -14,7 +15,9 @@
   <span><a [routerLink]="['/jogador']">Jogador</a></span>
   <span class="pipeline">|</span>
   <span><a [routerLink]="['/partida']">Partida</a></span>
-    <div class="spacer"></div> 
+    <div class="spacer"></div>
+    <span class="pipeline">|</span> 
+    <span><a [routerLink]="['/classificacao']">Classificação</a></span>
 </div>
 
 
