--- a/src/app/component/jogador/jogador.component.html
+++ b/src/app/component/jogador/jogador.component.html
@@ -17,7 +17,7 @@
     <mat-form-field appearance="fill">
       <mat-label>Lista de Clubes</mat-label>
       <mat-select formControlName="idClube">
-        <mat-option *ngFor="let clube of clubes" [value]="clube.nome">
+        <mat-option *ngFor="let clube of clubes" [value]="clube.id">
           {{clube.nome}}
         </mat-option>
       </mat-select>
