model e services criados

--- a/src/app/component/classificacao/classificacao.component.html
+++ b/src/app/component/classificacao/classificacao.component.html
@@ -1,1 +1,34 @@
-<p>classificacao works!</p>
+<html>
+<title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+<body>
+
+  <div class="w3-container">
+    <h2 style="text-align: center">Classificação:</h2>
+
+    <table class="w3-table-all">
+      <tr>
+        <th>Nome do Clube</th>
+        <th>Pontos</th>
+        <th>Vitória</th>
+        <th>Empate</th>
+        <th>Derrota</th>
+        <th>Saldo de Gols</th>
+      </tr>
+      <tr *ngFor="let class of classList">
+        <td>{{cadaclube.nome}}</td>
+        <td>{{cadaclube.cidade}}</td>
+        <td>{{cadaclube.nomeEstadio}}</td>
+        <td>{{cadaclube.anoFundacao}}</td>
+        <td><button><img class="bedit" src="./../assets/editar.png"></button><button><img class="bdelete"
+              src="./../assets/lixeira.png"></button>
+      </tr>
+    </table>
+    <a [routerLink]="['/clube']"> <img class="botaomais" src="./../assets/addbutton.webp"> </a>
+  </div>
+
+</body>
+
+</html>
