--- a/src/app/component/jogadorlistar/jogadorlistar.component.html
+++ b/src/app/component/jogadorlistar/jogadorlistar.component.html
@@ -22,7 +22,7 @@
       <td>{{cadajogador.posicao}}</td>
       <td>{{cadajogador.peBom}}</td>
       <td><button><img class="bedit" src="./../assets/editar.png"></button>
-        <button><img class="bdelete" src="./../assets/lixeira.png" (click)="delete(pessoa.id)"></button></td>
+        <button><img class="bdelete" src="./../assets/lixeira.png"></button></td>
     </tr>
   </table>
   <a [routerLink]="['/jogador']"> <img class="botaomais" src="./../assets/addbutton.webp"> </a>
