--- a/src/app/component/jogadorlistar/jogadorlistar.component.html
+++ b/src/app/component/jogadorlistar/jogadorlistar.component.html
@@ -2,6 +2,7 @@
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 <body>
 
 <div class="w3-container">
@@ -22,7 +23,7 @@
       <td>{{cadajogador.posicao}}</td>
       <td>{{cadajogador.peBom}}</td>
       <td><button><img class="bedit" src="./../assets/editar.png"></button>
-        <button><img class="bdelete" src="./../assets/lixeira.png"></button></td>
+        <button><img class="bdelete" src="./../assets/lixeira.png"    (click)="delete(cadajogador.id)"></button></td>
     </tr>
   </table>
   <a [routerLink]="['/jogador']"> <img class="botaomais" src="./../assets/addbutton.webp"> </a>
