deletar partida funcionando

--- a/src/app/component/classificacao/classificacao.component.html
+++ b/src/app/component/classificacao/classificacao.component.html
@@ -24,12 +24,12 @@
         <td>{{class.empate}}</td>
         <td>{{class.derrota}}</td>
         <td>{{class.saldoGols}}</td>
-        <td><button><img class="bedit" src="./../assets/editar.png"></button><button><img class="bdelete"
-              src="./../assets/lixeira.png"></button>
+        <td><button><img class="bedit" src="./../assets/editar.png"></button>
+            <button><img class="bdelete" src="./../assets/lixeira.png"></button>
       </tr>
     </table>
-    <!-- Porque essa porcaria não funciona e nos outros funciona?
-        <a [routerLink]="['/classificacao']"> <img class="botaomais" src="./../assets/addbutton.webp"> </a> -->
+        <!-- Pq essa porcaria não funciona nesse?
+           <a [routerLink]="['/classificacao']"> <img class="botaomais" src="./../assets/addbutton.webp"> </a> -->
   </div>
 
 </body>
